--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,22 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: fastapi_energy_ai
+    restart: always
+    depends_on:
+      - mysql
+    env_file:
+      - .env
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./models:/app/models
+      - ./app:/app/app
+      - ./static:/app/static
+
 volumes:
   mysql_data:
