--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,78 @@
-annotated-types==0.7.0
-anyio==4.9.0
-bcrypt==4.3.0
-CacheControl==0.14.3
-cachetools==5.5.2
-certifi==2025.7.9
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.8
-colorama==0.4.6
-cryptography==45.0.5
-dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
-exceptiongroup==1.3.0
+# --- Core Framework ---
 fastapi==0.116.0
+uvicorn==0.35.0
+starlette==0.46.2
+python-multipart==0.0.20
+watchfiles==1.1.0
+# --- Environment & Settings ---
+python-dotenv==1.1.1
+PyYAML==6.0.2
+# --- Authentication ---
+PyJWT==2.10.1
+passlib==1.7.4
+bcrypt==4.3.0
+python-jose==3.5.0
+email_validator==2.2.0
+# --- API Clients & HTTP ---
+httpx==0.28.1
+requests==2.32.4
+urllib3==2.5.0
+httplib2==0.22.0
+httpcore==1.0.9
+# --- Google Cloud Platform ---
 google-api-core==2.25.1
 google-api-python-client==2.176.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
-google-cloud-core==2.4.3
-google-cloud-firestore==2.21.0
-google-cloud-storage==3.2.0
-google-crc32c==1.7.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.73.1
-grpcio-status==1.73.1
+proto-plus==1.26.1
+protobuf==6.31.1
+uritemplate==4.2.0
+# --- Database & ORM ---
+SQLAlchemy==2.0.41
+PyMySQL==1.1.1
+# --- ML / Data Analysis ---
+numpy==2.0.2
+pandas==2.3.1
+scikit-learn==1.6.1
+scipy==1.13.1
+joblib==1.5.1
+threadpoolctl==3.6.0
+# --- Pydantic / Validation ---
+pydantic==2.11.7
+pydantic_core==2.33.2
+annotated-types==0.7.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+# --- Web & Protocols ---
+websockets==15.0.1
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
-httpcore==1.0.9
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
 hyperframe==6.1.0
-idna==3.10
-joblib==1.5.1
+dnspython==2.7.0
+# --- Utilities ---
+click==8.1.8
+colorama==0.4.6
+CacheControl==0.14.3
+cachetools==5.5.2
 msgpack==1.1.1
-numpy==2.0.2
-pandas==2.3.1
-passlib==1.7.4
-proto-plus==1.26.1
-protobuf==6.31.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic_core==2.33.2
-PyJWT==2.10.1
-PyMySQL==1.1.1
+six==1.17.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-jose==3.5.0
-python-multipart==0.0.20
 pytz==2025.2
-PyYAML==6.0.2
-requests==2.32.4
-rsa==4.9.1
-scikit-learn==1.6.1
-scipy==1.13.1
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.46.2
-threadpoolctl==3.6.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
 tzdata==2025.2
-uritemplate==4.2.0
-urllib3==2.5.0
-uvicorn==0.35.0
-watchfiles==1.1.0
-websockets==15.0.1
+# --- Security / Encoding ---
+cryptography==45.0.5
+cffi==1.17.1
+pycparser==2.22
+ecdsa==0.19.1
+rsa==4.9.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+# --- ASGI & Networking ---
+anyio==4.9.0
+sniffio==1.3.1
+exceptiongroup==1.3.0
+greenlet==3.2.3
+grpcio==1.73.1
+grpcio-status==1.73.1
